docs: README quick-start needs --add-opens for Arrow
Verified the quick-start end-to-end (compiled with -parameters, ran the client
which spawns the worker): it fails at startup without
--add-opens=java.base/java.nio=ALL-UNNAMED because Arrow accesses java.nio
internals. Add the flag to the client's SubprocessTransport command and a note
covering both the worker and client JVMs.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>